# impact-pose-estimation

./: .gitignore  .gitmodules  camera_config.py  compare_sims.py  download_checkpoints.py  estimate_pose.py  feature_matcher_tools.py  generate_templates.py  main.py  pyproject.toml
my_racecar/: my_racecar.urdf  my_racecar_differential.urdf
