[project]
name = "impact-pose-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "gradio>=6.0.2",
    "huggingface-hub[torch]>=0.22",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pybullet>=3.2.7",
    "pygame>=2.6.1",
    "pyglet<2",
    "requests>=2.32.5",
    "roma>=1.5.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
